# expense-tracker

./: .gitattributes  .gitignore  README.md  category_assigner_with_ai.py  csv_generator.py  db_initializer.py  main.py  requirements.txt  sonar-project.properties
.github/workflows/: build.yml  sonarqube.yml  trufflehog.yml
backend/: .dockerignore  Dockerfile  category_assigner_with_ai.py  config.py  csv_generator.py  database.py  db_initializer.py  fly.toml  init_db.py  main.py  models.py  pyproject.toml  requirements.txt  test_db.py
backend/auth_google/: auth_check_status.py  auth_status.py  auth_user.py  oauth2callback.py
backend/expenses/: process_expenses.py
backend/gmail/: categorization_prompt.md  read_messages.py
backend/gmail/endpoints/: messages.py
backend/gmail/services/: auth_service.py  csv_service.py  gmail_service.py  time_service.py
backend/gmail/services/categorization/: categorization_service.py
backend/gmail/strategies/: bcp.py  bcp_email_strategy.py  email_strategy_interface.py  interbank.py  interbank_email_strategy.py  interface.py  scotiabank.py  scotiabank_email_strategy.py  yape.py  yape_email_strategy.py
backend/helpers/: parse_date_multilocale.py
backend/strategies/: bcp_email_strategy.py  email_strategy_interface.py  interbank_email_strategy.py  scotiabank_email_strategy.py  yape_email_strategy.py
fronted/: settings.gradle.kts
fronted/app/: build.gradle.kts
frontend/: assetlinks.json  pubspec.yaml
frontend/app/: build.gradle.kts
frontend/frontend_flutter/expense_tracker/: pubspec.yaml
frontend/lib/: main.dart
(+56 files in other folders)
